# edu_perception

./: CMakeLists.txt  README.md  package.xml
docker/edu-perception/: Dockerfile
docker/edu_perception/: Dockerfile  makefile
docker/ie_app/: eduard-green-qr-code-pose-estimator.yaml  eduard-red-qr-code-pose-estimator.yaml
docker/image/: Dockerfile  makefile
docker/ipc127e/: Dockerfile  docker-compose.yaml  makefile
docker/qr_code_pose_estimator/: docker-compose.yaml
docker/qr_code_pose_estimator/launch_content/: qr_code_detection_and_pose_estimation.launch.py
include/edu_perception/: angle.hpp  h264_decoder.hpp  low_pass_filter.hpp  qr_code.hpp  stereo_inference.hpp  transform.hpp
include/edu_perception/detector/: qr_code_detector.hpp
include/edu_perception/stereo/: pose_estimation.hpp  stereo_inference.hpp
launch/: aruco_marker_pose_estimation.launch.py  eduard_green_aruco_marker_pose_estimation.launch.py  eduard_green_qr_pose_estimation.launch.py  eduard_red_aruco_marker_pose_estimation.launch.py  eduard_red_qr_pose_estimation.launch.py  qr_code_detection_and_pose_estimation.launch.py
parameter/: aruco_marker_pose_estimation.yaml  eduard_green_aruco_marker_pose_estimation.yaml  eduard_green_qr_pose_estimation.yaml  eduard_red_aruco_marker_pose_estimation.yaml  eduard_red_qr_pose_estimation.yaml  qr_code_detection_and_pose_estimation.yaml  qr_detection_and_pose_estimation.yaml
src/lib/: CMakeLists.txt  h264_decoder.cpp  pose_estimation.cpp  qr_code_detector.cpp  stereo_inference.cpp  transform.cpp
src/node/: CMakeLists.txt  apriltag_draw_node.cpp  apriltag_draw_node.hpp  apriltag_pose_estimation_node.cpp  apriltag_pose_estimation_node.hpp  oak_d_camera_node.cpp  oak_d_camera_node.hpp  qr_detection_and_pose_estimation.hpp  qr_detection_and_pose_estimation_node.cpp
src/test/: CMakeLists.txt  unittest_maker_pose_to_world_pose.cpp
